# app/Http/Resources/ProjectSpecialityResource.php
@@ -5,7 +5,7 @@ namespace App\Http\Resources;
 use Illuminate\Http\Resources\Json\JsonResource;
 
 /**
- * ПИВОТ
+ * Использовать только в ресурсе проекта. Нет поля проекта
  */
 class ProjectSpecialityResource extends JsonResource
 {
@@ -17,6 +17,38 @@ class ProjectSpecialityResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'course' => $this->course,
+            'priority' => $this->priority,
+            'speciality' => $this->speciality
+        ];
     }
+}
+
+/**
+ * @OA\Schema()
+ */
+class ProjectSpeciality extends ProjectSpecialityResource
+{
+    /**
+     * ID
+     * @var int
+     * @OA\Property()
+     */
+    public int $id;
+
+    /**
+     * Для какого курса. Если не задан, то для всех
+     * @var int
+     * @OA\Property()
+     */
+    public int $course;
+
+    /**
+     * Приоритет специальности
+     * @var int
+     * @OA\Property()
+     */
+    public int $priority;
 }
